Added loading animation on page load

--- a/AutoHub.Client/wwwroot/index.html
+++ b/AutoHub.Client/wwwroot/index.html
@@ -20,7 +20,29 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <!--<div class="container">
+            <div class="circle circle-1"></div>
+            <div class="circle circle-2"></div>
+            <div class="circle circle-3"></div>
+            <div class="circle circle-4"></div>
+            <div class="circle circle-5"></div>
+        </div>-->
+        <div class="loader-wrap">
+            <div class="loader" style="--t: 2s">
+                <div class="particle" style="--dt: -1.13s"></div>
+                <div class="particle"></div>
+                <div class="particle" style="--dt: -1.64s"></div>
+                <div class="particle"></div>
+                <div class="particle" style="--dt: -1.02s"></div>
+                <div class="particle"></div>
+                <div class="particle" style="--dt: -1.01s"></div>
+                <div class="particle"></div>
+                <div class="particle" style="--dt: -0.82s"></div>
+            </div>
+        </div>
+       
+    </div>
 
     <!--<div id="blazor-error-ui">
         An unhandled error has occurred.
